--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE hMTL>
+<!DOCTYPE html>
 <html>
     <head>
-        <meta charest="UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>BMI Calculator</title>
@@ -19,4 +19,5 @@
             <div id="result" ></div>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
