enhance BMI calculation logic

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <input class="longinput" type="number" id="inputweight" min="0" max="280" placeholder="Enter weight"><br><br>
                 <label>Height (m):</label><br><br>
                 <input class="longinput" type="number" id="inputheight" placeholder="Enter height"><br><br>
-                <button class="longinput" id="calculateBMI" onclick="calculateBMI()">Calculate BMI</button><br><br>
             </form>
-            <div id="result" ></div>
+            <button id="calculateBMI" onclick="calculateBMI()">Calculate BMI</button><br><br>
+            <div id="result" class="output"></div>
         </div>
     </body>
     <script src="script.js"></script>
